--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/jefzli21/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://angel.co/u/jeffrey-z-li" target="_blank" rel="noopener noreferrer" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+						<li><a href="https://github.com/jefzli21" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -79,21 +77,21 @@
 									<article>
 										<a href="#" class="image"><img src="images/Screen Shot 2022-09-27 at 3.46.46 PM.png" alt="" /></a>
 										<div class="inner">
-											<h4>Felp</h4>
+											<h4><a href="https://felp-e.herokuapp.com/" target="_blank" rel="noopener noreferrer" >Felp</a></h4>
 											<p>Felp is an app that is inspired by Yelp, but instead of showing every business, Felp only focus on restaurants. Hence the name: Felp(food help). The backend is built with Ruby on Rails, whereas the frontend utilizes React/Redux.</p>
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/Screen Shot 2022-10-05 at 3.42.38 AM.png" alt="" /></a>
 										<div class="inner">
-											<h4>Project Sticky</h4>
+											<h4><a href="https://project-sticky.herokuapp.com/" target="_blank" rel="noopener noreferrer" >Project Sticky</a></h4>
 											<p>Project Sticky is an app inspired by the need for project management. A virtual representation of the progress makes our app more entertaining and practical for people to notice where they are at in the project timeline. This is a group project built with 3 other software engineer utilizing MERN Stack.</p>
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/Screen Shot 2022-09-27 at 3.58.02 PM.png" alt="" /></a>
 										<div class="inner">
-											<h4>See You Next Year Diet Planner</h4>
+											<h4><a href="https://jefzli21.github.io/See_You_Next_Year_Diet_Planner/" target="_blank" rel="noopener noreferrer" >See You Next Year Diet Planner </a></h4>
 											<p>See You Next Year Diet Planner is a single page app built solely based on JavaScript where user can select different menu items to their menu. Based on the calories, fat, and protein content, the user will be able to see a predicted body shape if they continued with the same type of diet for a year.</p>
 										</div>
 									</article>
@@ -105,14 +103,15 @@
 							<div class="container">
 								<h3>Skills</h3>
 								<ul class="feature-icons">
-									<li class="icon solid fa-code">JavaScript</li>
-									<li class="icon solid fa-cubes">React/Redux</li>
-									<li class="icon solid fa-book">Ruby / on Rails</li>
-									<li class="icon solid fa-coffee">PostgreSQL</li>
-									<li class="icon solid fa-bolt">Node</li>
-									<li class="icon solid fa-users">HTML5</li>
-									<li class="icon solid fa-bolt">CSS</li>
-									<li class="icon solid fa-users">Git</li>
+									<li ><img src="https://skillicons.dev/icons?i=js" /> JavaScript</li>
+									<li ><img src="https://skillicons.dev/icons?i=react" /> React/Redux</li>
+									<li ><img src="https://skillicons.dev/icons?i=ruby" /> Ruby / on Rails</li>
+									<li ><img src="https://skillicons.dev/icons?i=postgres" /> PostgreSQL</li>
+									<li><img src="https://skillicons.dev/icons?i=nodejs" /> Node</li>
+									<li><img src="https://skillicons.dev/icons?i=html" /> HTML5</li>
+									<li><img src="https://skillicons.dev/icons?i=css" /> CSS</li>
+									<li><img src="https://skillicons.dev/icons?i=git" /> Git</li>
+									
 								</ul>
 							</div>
 						</section>
@@ -120,22 +119,14 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<h3>Get In Touch</h3>
+									<h3>Email: jefzli21@gmail.com</h3>
+									<div class="sites">
+
+										<a href="https://www.linkedin.com/in/jefzli21/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
+										<a href="https://angel.co/u/jeffrey-z-li" target="_blank" rel="noopener noreferrer" class="icon brands fa-angellist"><span class="label">AngelList</span></a>
+										<a href="https://github.com/jefzli21" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a>
+									</div>
 								</div>
 							</section>
 
@@ -476,7 +467,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; jeffrey-z-li. All rights reserved.</li><li>Design: HTML5 UP</li>
 							</ul>
 						</div>
 					</section>
