--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="image avatar"><img src="images/pic.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Jeffrey Z. Li</a></h1>
 					<p>Full-Stack Software Engineer <br /> 
-					| React | Redux | JavaScript | Ruby on Rails | Express | MongoDB | PostgreSQL | HTML | CSS | UCLA Alumni | Regent Scholar |
+					| React | Redux | Python | JavaScript | Ruby on Rails | Express | MongoDB | PostgreSQL | HTML | CSS | UCLA Alumni | Regent Scholar |
 					</p>
 				</header>
 				<nav id="nav">
@@ -52,18 +52,17 @@
 								<div class="container">
 									<header class="major">
 										<h2>Jeffrey Z. Li</h2>
-										<p>Full-Stack Software Enginner experienced in React/Redux, JavaScript, Ruby on Rails, SQL, MERN Stack, HTML, and CSS.</p>
+										<p>Full-Stack Software Enginner experienced in React/Redux, Python, JavaScript, Ruby on Rails, SQL, MERN Stack, HTML, and CSS.</p>
 									</header>
-									<p>I am a recent graduate at UCLA with a Bachelors in Economics.
+									<p>Recent graduate at UCLA/App Academy
 										<br/>
 										<br/>
 										Why am I a software engineer with an economics degree? 
 										<br/>
-										During my college days, I gained experience in performing data analysis by using R and python. Meanwhile, I took a C++ class that also allowed me to experience software development. After experiencing the more creative aspect of coding, I was deeply attracted to the ability to build applications instead of analyzing data and making charts. 
+										With a background in economics and a newfound passion for software development, I am a recent graduate from UCLA who is eager to bring my diverse skillset and dedication to the field. During my time in college, I honed my data analysis skills with R and Python and discovered my love for coding through a C++ class.
 										<br/>
 										<br/>
-										Realizing that my passion lies in software development, I joined App Academy and spent over 80+ hours a week learning how to code and have completed three full-scale projects. This is where I believe my future lies, and this is where I believe I will thrive.
-									</p>
+										This led me to enroll in App Academy, where I immersed myself in software development and completed three full-scale projects. I am excited to bring my unique perspective and drive to a software engineering role where I can continue to grow and contribute to innovative projects.									</p>
 								</div>
 							</section>
 
@@ -75,21 +74,21 @@
 								<p>In App Academy, I completed three full scale projects. Including a single page JavaScript Project, a full stack clone project, and a MERN stack project.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/Screen Shot 2022-09-27 at 3.46.46 PM.png" alt="" /></a>
+										<a href="https://felp-e.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/Screen Shot 2022-09-27 at 3.46.46 PM.png" alt="" /></a>
 										<div class="inner">
 											<h4><a href="https://felp-e.herokuapp.com/" target="_blank" rel="noopener noreferrer" >Felp</a></h4>
 											<p>Felp is an app that is inspired by Yelp, but instead of showing every business, Felp only focus on restaurants. Hence the name: Felp(food help). The backend is built with Ruby on Rails, whereas the frontend utilizes React/Redux.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/Screen Shot 2022-10-05 at 3.42.38 AM.png" alt="" /></a>
+										<a href="https://project-sticky.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/Screen Shot 2022-10-05 at 3.42.38 AM.png" alt="" /></a>
 										<div class="inner">
 											<h4><a href="https://project-sticky.herokuapp.com/" target="_blank" rel="noopener noreferrer" >Project Sticky</a></h4>
 											<p>Project Sticky is an app inspired by the need for project management. A virtual representation of the progress makes our app more entertaining and practical for people to notice where they are at in the project timeline. This is a group project built with 3 other software engineer utilizing MERN Stack.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/Screen Shot 2022-09-27 at 3.58.02 PM.png" alt="" /></a>
+										<a href="https://jefzli21.github.io/See_You_Next_Year_Diet_Planner/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/Screen Shot 2022-09-27 at 3.58.02 PM.png" alt="" /></a>
 										<div class="inner">
 											<h4><a href="https://jefzli21.github.io/See_You_Next_Year_Diet_Planner/" target="_blank" rel="noopener noreferrer" >See You Next Year Diet Planner </a></h4>
 											<p>See You Next Year Diet Planner is a single page app built solely based on JavaScript where user can select different menu items to their menu. Based on the calories, fat, and protein content, the user will be able to see a predicted body shape if they continued with the same type of diet for a year.</p>
@@ -121,6 +120,7 @@
 								<div class="container">
 									<h3>Get In Touch</h3>
 									<h3>Email: jefzli21@gmail.com</h3>
+									<a href="https://drive.google.com/file/d/1zfieRvX9lTVktjTq4w4x6p_cxQ-IBeMz/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h3>Resume</h3></a>
 									<div class="sites">
 
 										<a href="https://www.linkedin.com/in/jefzli21/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
